test/negative/i216-inheritance-among-concrete.cfr
car  *
   engine

myCar : car
   engine1 : engine
   engine2 : engine